# SwiftCart

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  flake.nix
backend/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/src/: lib.rs  main.rs
backend/src/handlers/: mod.rs  product.rs
backend/src/routes/: index.rs  mod.rs
frontend/: Dockerfile  Dockerfile.prod
frontend/src/app/: globals.css  page.tsx
