[package]
name = "backend"
version = "0.1.0"
edition = "2024"
author = "Azizul Islam"
email = "azizul7m@gmail.com"

[[bin]]
name = "swiftcart"
path = "src/main.rs"

[dependencies]
axum = {version= "0.8.4" , features = ["tokio","macros", "json", "query"]}
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.145"
anyhow = "1.0.100"
sqlx = {version= "0.8.6", features= ["postgres", "runtime-tokio", "uuid", "chrono"]}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = {version = "0.4.42", features = ["serde"]}
tower-http = { version = "0.6.6", features = ["cors"] }
